--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ javaVersion=21
 
 # Common
 minecraftVersion=1.21.1
-minecraftVersionRange=[1.21.9,1.22)
+minecraftVersionRange=[1.21.1]
 thisNeoFormVersion=1.21.1-20240808.144430
 
 # Parchment https://parchmentmc.org/docs/getting-started#choose-a-version
